--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Калькулятор</title>
-    <link rel="stylesheet" href="./index.css">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script_1.js" defer></script>
 </head>
 <body>
-<h1>Привет мир!</h1>
+<h1>Привет, фронтенд!</h1>
+<p>Открой консоль (F12), чтобы увидеть сообщение из JavaScript</p>
 </body>
 </html>
