--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>Калькулятор</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script_1.js" defer></script>
 </head>
 <body>
-<h1>Привет, фронтенд!</h1>
-<p>Открой консоль (F12), чтобы увидеть сообщение из JavaScript</p>
+<div class="calculator">
+    <label for="calcInput"></label><input type="text" id="calcInput" placeholder="Ввод 💩">
+
+    <div class="buttons">
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>/</button>
+        <button>%</button>
+
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>*</button>
+        <button>-</button>
+
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button class="span-2-rows">+</button>
+        <button class="span-2-rows equal">=</button>
+
+        <button>0</button>
+        <button>.</button>
+        <button class="btn-clear">C</button>
+    </div>
+
+    <div class="history" id="historyBlock">
+        💩 История
+    </div>
+
+    <div class="author">by UterGrooll</div>
+</div>
 </body>
 </html>
