Добавлен простой скрипт калькулятора

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="calculator">
-    <label for="calcInput"></label><input type="text" id="calcInput" placeholder="Ввод 💩">
+    <label for="calcInput"></label><input type="text" id="calcInput" placeholder="Ввод">
 
     <div class="buttons">
         <button>7</button>
@@ -35,7 +35,7 @@
     </div>
 
     <div class="history" id="historyBlock">
-        💩 История
+        История
     </div>
 
     <div class="author">by UterGrooll</div>
